syntax = "proto2";

package yb.master;

option java_package = "org.yb.master";

import "yb/rpc/service.proto";
import "yb/master/master_types.proto";

message GetNamespaceDiskUsageRequestPB {
}

message GetNamespaceDiskUsageResponsePB {
    optional MasterErrorPB error = 1;

    message NamespaceDiskUsageInfo {
        required bytes tablet_id = 1;
        optional uint64 disk_space_left = 2;
    }

    repeated NamespaceDiskUsageInfo namespaces = 2;
}

message GetDiskSpaceLeftByTabletIdRequestPB {
    required bytes tablet_id = 1;
}

message GetDiskSpaceLeftByTabletIdResponsePB {
    optional MasterErrorPB error = 1;
    optional uint64 disk_space_left = 2;
}

service MasterResourceManager {
    rpc GetNamespaceDiskUsage(GetNamespaceDiskUsageRequestPB) returns (GetNamespaceDiskUsageResponsePB);
    rpc GetDiskSpaceLeftByTabletId(GetDiskSpaceLeftByTabletIdRequestPB) returns (GetDiskSpaceLeftByTabletIdResponsePB);
}